Quick fix for overflow

--- a/css/main.sass
+++ b/css/main.sass
@@ -48,7 +48,7 @@ h2
     // Left Half
     .left
         +flex-column-nowrap
-        overflow: scroll
+        overflow: hidden
         
         // Container for night mode button
         .button-container
